--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,9 @@
 :root {
-  --bg-color: #f5f5f7;
-  --primary-color: #000;
-  --secondary-color: #086acd;
+  --bg-color: #e8e8ea;
+  --inverted-bg-color: #090949;
+
+  --primary-color: #0232c2;
+  --secondary-color: #0449e0;
+  --inverted-primary-color: #049604;
+  --inverted-secondary-color: #04ff04;
 }
